kind-cluster/nginx/daemonsets.yml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: nginx-daemonsets
  namespace: nginx
spec:
  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      name: nginx-dmn-pod
      labels:
        app: nginx

  spec:
  contianers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
